--- a/Volcker_Cites.html
+++ b/Volcker_Cites.html
@@ -380,6 +380,7 @@ summary {
 
 <div id="purpose" class="section level2">
 <h2>Purpose</h2>
+<p>This project analyzes who the Federal Reserve is citing in the Volcker Rule.</p>
 </div>
 <div id="data" class="section level2">
 <h2>Data</h2>
